--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-TODO_ACCOUNT=cympfh_TODO
+TODO_ACCOUNT=cupfh
 CURRENT_ACCOUNT=$( tw-ls | grep -B 1 '(default)' | head -1 )
 
 usage() {
@@ -18,10 +18,12 @@ twurl set default "$TODO_ACCOUNT"
 
 case "$1" in
     list )
-        twurl "/1.1/statuses/home_timeline.json?count=199" | jq -r 'reverse | .[] | "\u001b[31m\(.id_str)\u001b[0m \(.text) \u001b[37m(created at \(.created_at))\u001b[0m"'
+        twurl "/1.1/statuses/home_timeline.json?count=199" |
+        jq -r 'reverse | .[] | "\u001b[31m\(.id_str)\u001b[0m \(.text) \u001b[37m(created at \(.created_at))\u001b[0m"' |
+        grep 'todo:' | sed 's/todo://g'
         ;;
     add )
-        twurl -X POST "/1.1/statuses/update.json" -d "status=$2"
+        twurl -X POST "/1.1/statuses/update.json" -d "status=todo:$2"
         ;;
     rm )
         twurl -XPOST "/1.1/statuses/destroy/$2.json"
